--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "next": "15.1.8",
     "@supabase/supabase-js": "^2.44.4",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
